// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoRmp's itemPageView destination action: all fields 1`] = `
Object {
  "channel_type": "SYvlLHdgX",
  "device": Object {
    "advertising_id": "SYvlLHdgX",
    "ip": "SYvlLHdgX",
    "language": "SYvlLHdgX",
    "model": "SYvlLHdgX",
    "os": "SYVLLHDGX",
    "os_version": "SYvlLHdgX",
    "ua": "SYvlLHdgX",
    "unique_device_id": "SYvlLHdgX",
  },
  "event_type": "ITEM_PAGE_VIEW",
  "id": "SYvlLHdgX",
  "items": Array [
    Object {
      "id": "SYvlLHdgX",
      "price": Object {
        "amount": -35543909044060.16,
        "currency": "INR",
      },
      "quantity": -3554390904406016,
      "seller_id": "SYvlLHdgX",
    },
  ],
  "page_id": "SYvlLHdgX",
  "session_id": "SYvlLHdgX",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "SYvlLHdgX",
}
`;

exports[`Testing snapshot for MolocoRmp's itemPageView destination action: required fields 1`] = `
Object {
  "channel_type": "SYvlLHdgX",
  "event_type": "ITEM_PAGE_VIEW",
  "id": "SYvlLHdgX",
  "items": Array [
    Object {
      "id": "SYvlLHdgX",
    },
  ],
  "page_id": "SYvlLHdgX",
  "session_id": "SYvlLHdgX",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "SYvlLHdgX",
}
`;
